@@ -5,20 +5,20 @@ import bldutil
 progs = '''
 aastack agmig ai2refl avo beamspray cascade c2r cell2 cell3 cgscan
 cmp2shot constfdmig2 cos2ang depth2time diffoc diffraction dimag dmo
-dsr dsr2 envelope fincon findmo finstack fkamo fkdmo fold fourvc
-fourvc0 fourvc2 fowler freqint freqlet gazdag gdmo halfint headerattr
-headermath hwt2d hwtex infill inmo inmo3 intbin intbin3 isin2ang
-itaupmo itaupmo2 itaupmo3 itxmo iwarp iwarp2 iwarp3 kgdmo kirchinv
-kirchnew kirmod kirmod3 linsincos migsteep3 modrefl modrefl2 modrefl3
-moveout nmo nmo3 nmov nmow nmow_adj ovc ovczo oway1 pmig pnmo pnmo3d
-pp2psang pp2psang2 pp2pstsic preconstkirch prestolt ptaupmo3 ptaupmo
-ptaupmoVTI pveltran map2coh pveltranVTI pveltran3 pyramid radial
-radial2 radon randrefl rays2 rays2a rays3 refer ricker ricker1 ricker2
-rweab rwesrmig rwezomig s2ofz s2ofz2 segyheader segyread segywrite
-shifts shoot2 shot2cmp shotconstkirch shotholes shotprop sin slant
-srmva srsyn sstep2 stolt stolt2 stoltstretch stretch t2warp tan2ang
-taupmo time2depth tlagtoang2d tshift txpscan txpnmo vczo vczo2 velmod
-veltran voft vofz vscan xlagtoang2d zoeppritz zomig zomva
+dsr dsr2 envelope fincon findmo finstack fkamo fkdmo fkgdmo fold
+fourvc fourvc0 fourvc2 fowler freqint freqlet gazdag gdmo halfint
+headerattr headermath hwt2d hwtex infill inmo inmo3 intbin intbin3
+isin2ang itaupmo itaupmo2 itaupmo3 itxmo iwarp iwarp2 iwarp3 kgdmo
+kirchinv kirchnew kirmod kirmod3 linsincos migsteep3 modrefl modrefl2
+modrefl3 moveout nmo nmo3 nmov nmow nmow_adj ovc ovczo oway1 pmig pnmo
+pnmo3d pp2psang pp2psang2 pp2pstsic preconstkirch prestolt ptaupmo3
+ptaupmo ptaupmoVTI pveltran map2coh pveltranVTI pveltran3 pyramid
+radial radial2 radon randrefl rays2 rays2a rays3 refer ricker ricker1
+ricker2 rweab rwesrmig rwezomig s2ofz s2ofz2 segyheader segyread
+segywrite shifts shoot2 shot2cmp shotconstkirch shotholes shotprop sin
+slant srmva srsyn sstep2 stolt stolt2 stoltstretch stretch t2warp
+tan2ang taupmo time2depth tlagtoang2d tshift txpscan txpnmo vczo vczo2
+velmod veltran voft vofz vscan xlagtoang2d zoeppritz zomig zomva
 '''
 
 libsrc = 'segy'
